fix: not so much whitespace above first section

--- a/src/app.css
+++ b/src/app.css
@@ -5,10 +5,10 @@
 @layer base{
     @font-face {
         font-family: 'Montaga';
-        src: url(../static/fonts/Montaga-Regular.ttf) format('truetype');
+        src: url(/fonts/Montaga-Regular.ttf) format('truetype');
     }
     @font-face {
         font-family: 'Montserrat';
-        src: url(../static/fonts/Montserrat-VariableFont_wght.ttf) format('truetype');
+        src: url(/fonts/Montserrat-VariableFont_wght.ttf) format('truetype');
     }
 }
